# auditmyvisitors

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  install.sh
.github/workflows/: release.yml
src/: main.rs  page_audit.rs
src/auth/: credentials.rs  mod.rs  pkce.rs  refresh.rs  server.rs
src/cli/: mod.rs
src/clusters/: mod.rs
src/config/: mod.rs
src/domain/: mod.rs
src/errors/: mod.rs
src/export/: builder.rs  csv.rs  mod.rs  pdf.rs
src/google/: analytics_admin.rs  analytics_data.rs  mod.rs  search_console.rs
src/helpers/: mod.rs
src/insights/: mod.rs
src/intent/: mod.rs
src/interactive/: menu.rs  mod.rs  setup.rs
src/narrative/: mod.rs
src/opportunities/: mod.rs
src/reports/: ai_traffic.rs  channels.rs  clusters.rs  compare.rs  countries.rs  decay.rs  devices.rs  growth.rs  mod.rs  opportunities.rs  overview.rs  page_detail.rs  queries.rs  site_health.rs  top_pages.rs  trends.rs
src/snapshots/: mod.rs
src/storage/: mod.rs
src/ui/: mod.rs
